Theming: add a shadow behind the posters, fix the navbar's height, fix the height of the sidebar in Firefox

--- a/public/app.css
+++ b/public/app.css
@@ -32,6 +32,15 @@
 }
 
 /* ----------
+   movie
+   ---------- */
+
+.movie.card .image {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2);
+    /*box-shadow: 0 2px 16px 0 rgba(34, 36, 38, 0.85);*/
+}
+
+/* ----------
    multiple-inputs
    ---------- */
 
